[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/theme.tres" type="Theme" id=1]
[ext_resource path="res://Dodge/DodgeOptions.gd" type="Script" id=2]

[node name="DodgeOptions" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 541.0
margin_top = 285.0
margin_right = 739.0
margin_bottom = 435.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer"]
margin_right = 198.0
margin_bottom = 27.0
text = "Game Type"

[node name="GameTypeSelection" type="OptionButton" parent="CenterContainer/VBoxContainer"]
margin_top = 31.0
margin_right = 198.0
margin_bottom = 78.0
size_flags_horizontal = 3
toggle_mode = false
text = "Addition"
expand_icon = true
items = [ "Addition", null, false, 0, null, "Subtraction", null, false, 1, null, "Fact Families", null, false, 2, null, "Multiplication", null, false, 3, null, "Division", null, false, 4, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CenterContainer/VBoxContainer"]
margin_top = 82.0
margin_right = 198.0
margin_bottom = 109.0
text = "Max Answer"

[node name="MaxAnswerSelection" type="SpinBox" parent="CenterContainer/VBoxContainer"]
margin_top = 113.0
margin_right = 198.0
margin_bottom = 150.0
value = 10.0

[node name="AntiTouchLabel" type="Label" parent="CenterContainer/VBoxContainer/MaxAnswerSelection"]
margin_left = 123.0
margin_right = 180.0
margin_bottom = 37.0
mouse_filter = 0
size_flags_horizontal = 0
size_flags_vertical = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ExitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -74.0
margin_top = -47.0
margin_right = 74.0
text = "OK"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="item_selected" from="CenterContainer/VBoxContainer/GameTypeSelection" to="." method="_on_GameType_selected"]
[connection signal="value_changed" from="CenterContainer/VBoxContainer/MaxAnswerSelection" to="." method="_on_MaxAnswer_changed"]
[connection signal="pressed" from="ExitButton" to="." method="_exit"]
